# Qtcodes

./: .gitignore  README.md
0/: CMakeLists.txt  README.md  main.cpp
box/: CMakeLists.txt  Taskpool.cpp  Taskpool.hpp  box.cpp  box.hpp  client.cpp  client.hpp  loger.cpp  loger.hpp  main.cpp  tools.h
cal/: .clang-format  CMakeLists.txt  README.md  cal_ui.cpp  cal_ui.hpp  main.cpp
hanoi/: CMakeLists.txt  co.cpp  co.hpp  hanoi.cpp  hanoi.hpp  key.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  thread_main.cpp
html2pdf/: CMakeLists.txt  main.cpp
lightsoff/: .gitignore  CMakeLists.txt  LightsOffPuzzles.txt  lightsoff.cpp  lightsoff.hpp  main.cpp
qml/: CMakeLists.txt  main.cpp  main.qml
test_player/: CMakeLists.txt  main.cpp
time/: CMakeLists.txt  main.cpp
